--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TaskFam"
         tools:targetApi="31">
         <activity
+            android:name=".TaskDetail"
+            android:exported="false" />
+        <activity
+            android:name=".task"
+            android:exported="false" />
+        <activity
             android:name=".CreateHome"
             android:exported="false" />
         <activity
@@ -32,21 +38,23 @@
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false">
-            <!-- Quitar comentario para usar como actividad principal-->
-<!--            android:exported="true">-->
-<!--             <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+
+            <!-- Quitar comentario para usar como actividad principal -->
+            <!-- android:exported="true"> -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
